@@ -19,4 +19,18 @@ is($hash1, '$reversed$drowssap', 'Password is reversed');
 ok($passphrase->verify_password($password, $hash1), 'Self-generated password validates');
 ok(!$passphrase->needs_rehash($hash1), 'Self-generated password doesn\'t need to be regenerated');
 
+my $passphrase2 = Crypt::Passphrase->new(encoder => {
+	module => 'Pepper::Simple',
+	inner  => 'Reversed',
+	peppers => {
+		1 => 'abcd',
+	},
+});
+
+my $hash2 = $passphrase2->hash_password($password);
+ok($passphrase2->verify_password($password, $hash2), 'Peppered password validates');
+ok(!$passphrase2->needs_rehash($hash2), 'Peppered password doesn\'t need to be regenerated');
+ok($passphrase2->verify_password($password, $hash1), 'Unpeppered password validates');
+ok($passphrase2->needs_rehash($hash1), 'Non-peppered password does need to be regenerated');
+
 done_testing;
