@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase
 
 {{$NEXT}}
+          - Add Crypt::Passphrase::Pepper::Simple
           - Bump minimum perl to 5.14
 
 0.013     2023-03-29 14:53:58+02:00 Europe/Amsterdam
